# QA_GRAPHRAG

./: .gitignore  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  README.md  agents.md  bootstrap_worktree.bat  index.html  package-lock.json  package.json  pyproject.toml  start_project.bat  start_project_for_worktree.bat  start_project_v1.bat  stop_project.bat  vite.config.ts
agent/: __init__.py  case_extraction_routes.py  chunk_retriever.py  config.py  demo.py  graphrag_visual_routes.py  langgraph.json  llm_routes.py  migrate_thread_messages.py  thread_maintenance.py  thread_message_store.py  thread_routes.py  vectorstore.py
agent/case_extraction/: __init__.py  prompts.py  service.py
agent/test_agent/: __init__.py  agent.py  config.py  geo_utils.py  graph_api.py  graphrag_query.py  graphrag_runtime.py  graphrag_storage.py  prosail_cases.py  repository_registry.py  state.py
backend_test/: test_agent.py
backend_test/case/: china_map_viewer.html  prompt.py  utils.py  案例提取.ipynb
case_extraction_test/: utils.py  案例提取.ipynb
docs/: graphrag-best-practice-roadmap.md  project-structure.md  system-design-report.md
public/artifacts/: communities.parquet  community_reports.parquet  covariates.parquet  documents.parquet  entities.parquet  (+2 more)
runtime/: package-lock.json  package.json  server.ts
scripts/: bootstrap-worktree.ps1  check_backend_python.py  verify_kg.py  verify_runtime.py
src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
templates/: acceptance_summary_template.md  system_design_template.md  user_manual_template.md  系统详细设计报告.docx  验收总结报告.docx
(+75 files in other folders)
